trunk/Archive2/df/c9f0353762597a/output
main.cpp: In function 'int main()':
main.cpp:41:12: error: 'battleship' was not declared in this scope
     vector<battleship> armada{1,2,3,4};
            ^
main.cpp:41:22: error: template argument 1 is invalid
     vector<battleship> armada{1,2,3,4};
                      ^
main.cpp:41:22: error: template argument 2 is invalid
main.cpp:41:30: error: invalid type in declaration before '{' token
     vector<battleship> armada{1,2,3,4};
                              ^
main.cpp:41:38: error: scalar object 'armada' requires one element in initializer
     vector<battleship> armada{1,2,3,4};
                                      ^
